<resources>
    <string name="app_name">Diabetes</string>


    <!-- Strings related to login -->
    <string name="password">Password (optional)</string>
    <string name="sign_in">Sign in or register</string>
    <string name="sign_in_short">Sign in</string>
    <string name="login">Log in</string>


    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="glucose_reading">Glucose reading</string>
    <string name="time">Time</string>
    <string name="time_period">Time Period</string>
    <string name="action">Action</string>
    <string name="medication">Mediation</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="pass">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="summary">Summary</string>
    <string name="measure">Measure</string>
    <string name="average">Average</string>
    <string name="highs">Highs</string>
    <string name="lows">Lows</string>
    <string name="normal">Normal</string>
    <string name="signinfail">Sign in failed!</string>
    <string name="userprofile">User Profile</string>
    <string name="fillindetails">Let\'s get to know more about you</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_profile">Profile </string>
    <string name="one_user">One user</string>
    <string name="all_users">All users</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_take_readings">Take Readings</string>
    <string name="title_activity_user_profile">Fill Profile</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="overview">Overview</string>
    <string name="trends">Trends</string>
    <string name="reminders">Reminders</string>
    <string name="last_check">Last Check</string>
    <string name="tips">Tips</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_caregiver">CaregiverActivity</string>
    <string name="doctor_name">Doctor\'s name</string>
    <string name="doctor_email" />
    <string name="doctor_phone">Doctor\'s phone</string>
    <string name="doctor_email2">Doctor\'s email</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">Alarm</string>
    <string name="add_reading">Add reading</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_reminder">Add reminder</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_off">Alarm off</string>

    <string name="on">on</string>
    <string name="off">off</string>
    <string name="set_alarm">Set alarm</string>
    <string name="hyper">Hyperglycemia</string>
    <string name="low">Low</string>
    <string name="ok">Ok</string>
    <string name="hypo">Hypoglycemia</string>
    <string name="high">High</string>

    <string name="export">Graph exported to gallery</string>
    <string name="not_export">Graph not exported to gallery</string>
    <string name="doctors">Doctors</string>
    <string name="emergency">Emergency contacts</string>
    <string name="log_out">Log out</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_profile">Profile</string>

    <string name="settings">Settings</string>
    <string name="backup_export">Export </string>
    <string name="emergency_name">Emergency Contact Name</string>
    <string name="call">Call</string>
    <string name="caregiver_relation">Caregiver relation</string>
    <string name="caregiver_phone">Caregiver phone</string>

    <string name="no_reminder">No Reminders have been set yet.</string>
    <string name="date">Date</string>
</resources>
