<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@mipmap/ic_account_circle"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@mipmap/ic_doctor_black"
            android:title="@string/doctors" />
        <item
            android:id="@+id/nav_export"
            android:icon="@mipmap/ic_backup"
            android:title="@string/backup_export" />

            <item
                android:id="@+id/nav_emergency"
                android:icon="@mipmap/ic_contact_phone2"
                android:title="@string/emergency" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out" />
    </group>
</menu>