<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:layout_alignParentTop="true"

    xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measure"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/glucosereading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_glucosereading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/glucose_reading"
                        android:inputType="number|numberSigned|numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/et_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/time" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:text="@string/time_period"

                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner"
                    style="@android:style/Widget.Holo.Light.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/medication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_medication"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/medication" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/notes"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_measure"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/submit"
                    android:textColor="@color/mdtp_white" />
            </LinearLayout>
        </ScrollView>

