<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ellekay.lucie.diabetes.views.UserProfile"
    tools:showIn="@layout/activity_user_profile">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F3F1F2"
        android:orientation="vertical"
        android:padding="25dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/fillindetails"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:focusable="false"
            android:fontFamily="serif"
            android:hint="@string/dob"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableLeft="@mipmap/ic_height"
                android:fontFamily="serif"
                android:hint="@string/height"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableLeft="@mipmap/ic_weight"
                android:fontFamily="serif"
                android:hint="@string/weight"
                android:padding="10dp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:checkedButton="@+id/radio_male">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/male"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:text="@string/female"
                android:textColor="@color/mdtp_ampm_text_color"
                android:textSize="18sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            android:drawableLeft="@mipmap/ic_location_on"
            android:fontFamily="serif"
            android:hint="@string/location"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnSubmitDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:onClick="userProfileSubmit"
            android:text="@string/submit"
            android:textColor="@color/mdtp_white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
