<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ellekay.lucie.diabetes.views.SignUp"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@mipmap/gradient_bg3"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="100dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            android:fontFamily="serif"
            android:hint="@string/username"
            android:padding="16dp" />


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#fff"
            android:fontFamily="serif"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"

            android:background="@color/colorPrimary"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/mdtp_white" />

        <Button
            android:id="@+id/btnLogInActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/mdtp_white" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
